--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "vercel-build": "npx prisma generate && next build"
+    "lint": "eslint"
   },
   "dependencies": {
     "clsx": "^2.1.1",
